# poetry-python-cookiecutter

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.dist_name}}/: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
{{cookiecutter.dist_name}}/tests/: test_example.py
{{cookiecutter.dist_name}}/{{cookiecutter.project_slug}}/: __init__.py
