[tool.poetry]
name = "poetry-python-cookiecutter"
version = "0.0.1"
description = "poetry-python-cookiecutter"
authors = ["Alan Silva <alanwilter@gmail.com>"]
readme = "README.md"
packages = [{ include = "poetry-python-cookiecutter" }]
keywords = [
    "cookiecutter",
    "template",
    "package",
    "ruff",
    "poetry",
    "pre-commit",
    "mypy",
]
include = ["{{cookiecutter.project_slug}}/**/*", "cookiecutter.json", "hooks/*"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.2"
pre-commit = "^3.0.0"
pip = "^23.1.2"
mypy = "^1.6.1"
wheel = "^0.42.0"

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.mypy]
# ignore_missing_imports = true #waiting for some stubs
strict = true
disable_error_code = ["type-arg"]

# [[tool.mypy.overrides]]
# module = []
# ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["UP", "RUF", "I", "E501"]
ignore = ["UP036"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"tests/*" = ["D100", "D103", "D104"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
